# text-splitter

./: README.md  pyproject.toml
text_splitter/: __init__.py  splitter.py
